now tests pass